[build-system]
requires = ["hatchling>=1.24.2"]
build-backend = "hatchling.build"

[project]
name = "endpointkolauda"
version = "0.1.0"
description = "EndpointKolauda: JSON endpoint structure and value auditing toolkit."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.7,<3.0",
    "rich>=13.7,<14.0",
    "typer>=0.12,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "ruff>=0.8,<1.0",
]
ui = [
    "streamlit>=1.43,<2.0",
]

[project.scripts]
kolauda = "kolauda.cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/kolauda"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]

